--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: ph2ifttt
   name: ph2ifttt
-  namespace: ph2ifttt
+  namespace: ph2ifttt_dev
 spec:
   allocateLoadBalancerNodePorts: true
   ipFamilies:
