--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -39,7 +39,7 @@ spec:
             secretKeyRef:
               key: webhookkey
               name: ph2ifttt
-        image: mmenger/ph2ifttt:0.5.0-rc01
+        image: mmenger/ph2ifttt:0.5.0
         imagePullPolicy: IfNotPresent
         name: ph2ifttt
         resources: {}
